[PUSH] fixed selectors design on Firefox

--- a/src/containers/moviePage/MoviePage.scss
+++ b/src/containers/moviePage/MoviePage.scss
@@ -170,7 +170,7 @@ body {
 #sourceSelect {
     height: 37px;
     width: 92px;
-    background-color: rgba(102, 65, 65, 0);
+    background-color: rgba(0, 0, 0, 0.603);
     border: 1px solid white;
     border-radius: 1px;
     margin-top: 3px;
